--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container nav">
       <div class="brand" aria-label="Identidade do site">
         <div class="logo">
-          <img src="laura-avatar-512.webp" alt="Logo/Avatar Laura" />
+          <img src="terapeuta-paciente-1200x800 (1)" alt="terapeura/ paciente" />
         </div>
         <div class="brand-text">
           <b>Laura Sathler</b>
@@ -84,7 +84,7 @@
         </div>
         <div>
           <img class="img" src="terapeuta-paciente-1200x800.webp"
-               onerror="this.onerror=null;this.src='laura-avatar-512.webp'"
+               onerror="this.onerror=null;this.src='terapeuta-paciente-1200x800.webp'"
                alt="Terapeuta e paciente em diálogo acolhedor" width="1200" height="800" />
         </div>
       </div>
