--- a/index.html
+++ b/index.html
@@ -4,66 +4,63 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Laura Sathler | Psicóloga (CRP 04/30866)</title>
-  <meta name="description" content="Psicoterapia humanista-existencial. Espaço de escuta, acolhimento e reflexão. Agende sua sessão com Laura Sathler, CRP 04/30866.">
+  <meta name="description" content="Psicoterapia humanista-existencial para cuidado emocional, autoconhecimento e qualidade de vida. Agende sua sessão com Laura Sathler, CRP 04/30866." />
   <style>
     :root{
-      --bg:#f6efe9; --bg2:#fbf8f5; --card:#ffffff; --text:#2b2b2b; --muted:#6b6b6b;
-      --accent:#79a6a3; --accent-2:#e2d6cc; --radius:18px; --shadow:0 10px 24px rgba(0,0,0,.08);
-      --maxw:1080px; --s1:.5rem; --s2:.75rem; --s3:1rem; --s4:1.5rem; --s5:2rem; --s6:3rem;
+      --bg:#f6efe9;--bg2:#fbf8f5;--card:#ffffff;--text:#2b2b2b;
+      --muted:#6b6b6b;--accent:#79a6a3;--accent-2:#e2d6cc;
+      --radius:18px;--shadow:0 10px 24px rgba(0,0,0,.08);
+      --maxw:1080px;--s1:.5rem;--s2:.75rem;--s3:1rem;
+      --s4:1.5rem;--s5:2rem;--s6:3rem
     }
     *,*::before,*::after{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;
-      color:var(--text); background:linear-gradient(180deg,var(--bg),var(--bg2) 40%,var(--bg) 100%);
-      line-height:1.6; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
-    }
+    body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text);
+      background:linear-gradient(180deg,var(--bg),var(--bg2) 40%,var(--bg) 100%);line-height:1.6}
     h1,h2,h3{line-height:1.2;margin:0 0 var(--s2)}
-    h1{font-size:clamp(1.8rem,3.5vw,2.6rem)} h2{font-size:clamp(1.4rem,3vw,2rem)}
-    p{margin:0 0 var(--s3)} a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
+    h1{font-size:clamp(1.8rem,3.5vw,2.6rem)}
+    h2{font-size:clamp(1.4rem,3vw,2rem)}
+    p{margin:0 0 var(--s3)}
+    a{color:var(--accent);text-decoration:none}
+    a:hover{text-decoration:underline}
     .container{width:min(var(--maxw),92vw);margin-inline:auto}
-
-    /* header */
-    header{position:sticky;top:0;z-index:10;background:rgba(246,239,233,.9);backdrop-filter:saturate(160%) blur(8px);border-bottom:1px solid #eadfd6}
+    header{position:sticky;top:0;z-index:10;background:rgba(246,239,233,.9);
+      backdrop-filter:saturate(160%) blur(8px);border-bottom:1px solid #eadfd6}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:.6rem 0}
     .brand{display:flex;align-items:center;gap:.75rem}
-    .logo{width:44px;height:44px;border-radius:50%;overflow:hidden;box-shadow:var(--shadow)}
-    .logo img{width:100%;height:100%;object-fit:cover}
+    .brand-text{display:flex;flex-direction:column}
+    .brand-text b{font-weight:800}
+    .brand-text small{color:var(--muted)}
     nav ul{display:flex;gap:.75rem;list-style:none;margin:0;padding:0}
-    nav a{display:inline-block;padding:.35rem .55rem;border-radius:10px;font-weight:600}
-    nav a:hover{background:var(--accent-2);text-decoration:none}
-
-    /* layout */
+    nav a{padding:.35rem .55rem;border-radius:10px;font-weight:600}
+    nav a:hover{background:var(--accent-2)}
     section{padding:var(--s6) 0}
-    .card{background:var(--card);border:1px solid #eee4da;border-radius:var(--radius);box-shadow:var(--shadow);padding:var(--s4)}
+    .card{background:var(--card);border:1px solid #eee4da;border-radius:var(--radius);
+      box-shadow:var(--shadow);padding:var(--s4)}
     .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center}
-
-    /* images */
-    .img-cover{width:100%;aspect-ratio:3/2;object-fit:cover;border-radius:var(--radius);box-shadow:var(--shadow)}
+    .img-cover{width:100%;border-radius:var(--radius);box-shadow:var(--shadow);object-fit:cover}
     .portrait-circle{
-      width:200px;height:200px;border-radius:50%;object-fit:cover;box-shadow:var(--shadow);
-      display:block;margin:auto;
+      width:240px;height:240px;border-radius:50%;object-fit:cover;
+      box-shadow:var(--shadow);display:block;margin:auto
     }
     .muted{color:var(--muted);font-size:.95rem}
-    .btn{display:inline-flex;align-items:center;justify-content:center;gap:.4rem;padding:.85rem 1rem;border-radius:12px;font-weight:700;border:1px solid transparent;box-shadow:var(--shadow);cursor:pointer}
-    .btn-primary{background:var(--accent);color:#fff} .btn-primary:hover{filter:brightness(.95);text-decoration:none}
+    .btn{display:inline-flex;align-items:center;justify-content:center;gap:.4rem;
+      padding:.85rem 1rem;border-radius:12px;font-weight:700;border:1px solid transparent;
+      box-shadow:var(--shadow);cursor:pointer}
+    .btn-primary{background:var(--accent);color:#fff}
+    .btn-primary:hover{filter:brightness(.95)}
     .cta{display:flex;gap:.6rem;flex-wrap:wrap;margin-top:var(--s2)}
-    footer{padding:2rem 0;border-top:1px solid #eadfd6;color:var(--muted);text-align:center}
-
     @media (max-width:900px){
       .grid-2{grid-template-columns:1fr}
-      .portrait-circle{width:170px;height:170px}
+      .portrait-circle{width:200px;height:200px}
     }
   </style>
 </head>
 <body>
-  <!-- Topo -->
   <header>
     <div class="container nav">
       <div class="brand">
-        <div class="logo"><img src="Laura.jpeg" alt="Logo/Avatar Laura"></div>
-        <div>
-          <b>Laura Sathler</b><br>
+        <div class="brand-text">
+          <b>Laura Sathler</b>
           <small>Psicóloga · CRP 04/30866</small>
         </div>
       </div>
@@ -79,7 +76,7 @@
   </header>
 
   <main>
-    <!-- O que é Psicoterapia? (texto à esquerda, imagem horizontal à direita) -->
+    <!-- O que é Psicoterapia -->
     <section id="psicoterapia">
       <div class="container grid-2">
         <div class="card">
@@ -89,31 +86,29 @@
           <p>Cada conversa é uma oportunidade para se escutar, se compreender e se posicionar no mundo, no seu tempo e do seu jeito.</p>
         </div>
         <div>
-          <!-- usa exatamente o nome do arquivo do seu repo -->
-          <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em sessão">
+          <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" />
         </div>
       </div>
     </section>
 
-    <!-- Sobre mim (foto menor em círculo à esquerda, texto à direita) -->
+    <!-- Sobre mim -->
     <section id="sobre">
       <div class="container grid-2">
-        <div style="text-align:center">
-          <img class="portrait-circle" src="Laura.jpeg" alt="Foto de Laura Sathler">
+        <div>
+          <img class="portrait-circle" src="Laura.jpeg" alt="Foto de Laura Sathler" />
         </div>
         <div class="card">
           <h2>Sobre mim</h2>
-          <p>Sou Laura Sathler, psicóloga (CRP 04/30866) com mais de 10 anos de experiência clínica, formada pela PUC Minas e com especialização em Avaliação e Diagnóstico Psicológico. Minha atuação é baseada na abordagem humanista-existencial, valorizando a singularidade de cada pessoa e construindo um espaço de acolhimento, presença e diálogo genuíno.</p>
+          <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866) com mais de 10 anos de experiência clínica, formada pela PUC Minas e com especialização em <strong>Avaliação e Diagnóstico Psicológico</strong>. Minha atuação é baseada na abordagem <strong>humanista-existencial</strong>, valorizando a singularidade de cada pessoa e construindo um espaço de acolhimento, presença e diálogo genuíno.</p>
           <p>Atendo exclusivamente online adolescentes e adultos, com foco em casos de ansiedade, tristeza persistente, vazio existencial, estresse e burnout, autoestima e questões relacionadas a relacionamentos. Meu objetivo é oferecer um cuidado que respeite o seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
         </div>
       </div>
     </section>
 
-    <!-- Quando procurar -->
+    <!-- Quando procurar terapia -->
     <section id="quando">
       <div class="container card">
         <h2>Quando buscar terapia?</h2>
-        <p>Pode ser o momento de iniciar um processo terapêutico quando você:</p>
         <ul>
           <li>Sente ansiedade, tristeza ou cansaço emocional frequentes.</li>
           <li>Percebe dificuldade para lidar com mudanças, perdas ou transições de vida.</li>
@@ -121,37 +116,32 @@
           <li>Enfrenta conflitos nos relacionamentos ou no trabalho.</li>
           <li>Quer se conhecer melhor e encontrar novas formas de viver com mais equilíbrio e autenticidade.</li>
         </ul>
-        <p>A terapia é para qualquer pessoa que deseje cuidar da saúde emocional e desenvolver recursos para lidar com os desafios da vida.</p>
+        <p class="muted">A terapia é para qualquer pessoa que deseje cuidar da saúde emocional e desenvolver recursos para lidar com os desafios da vida.</p>
       </div>
     </section>
 
-    <!-- Chamada para atendimento -->
+    <!-- Contato -->
     <section id="contato">
       <div class="container card">
         <h2>Agende sua sessão</h2>
         <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
         <div class="cta">
-          <a class="btn btn-primary" href="https://wa.me/5531991593800" target="_blank" rel="noopener">📱 WhatsApp: Clique aqui para falar comigo</a>
-          <a class="btn" href="mailto:Laurasathler@yahoo.com.br">📧 E‑mail: Laurasathler@yahoo.com.br</a>
+          <a class="btn btn-primary" href="https://wa.me/5531991593800" target="_blank" rel="noopener">📱 WhatsApp</a>
+          <a class="btn" href="mailto:Laurasathler@yahoo.com.br">📧 E-mail</a>
         </div>
-        <p style="margin-top:var(--s2)">☎️ <strong>Telefone:</strong> +55 31 99159‑3800</p>
-        <p class="muted" style="margin-top:var(--s1)">Atendimento online, com horários flexíveis e ambiente seguro para que você possa se expressar livremente.</p>
+        <p style="margin-top:var(--s2)"><strong>Telefone:</strong> +55 31 99159-3800</p>
       </div>
     </section>
   </main>
 
   <footer>
-    <div class="container">© <span id="year"></span> Laura Sathler · Psicóloga · CRP 04/30866</div>
+    <div class="container" style="padding:2rem 0;border-top:1px solid #eadfd6;color:var(--muted);text-align:center">
+      © <span id="year"></span> Laura Sathler · Psicóloga · CRP 04/30866
+    </div>
   </footer>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click',e=>{
-        const el=document.querySelector(a.getAttribute('href'));
-        if(el){e.preventDefault(); el.scrollIntoView({behavior:'smooth', block:'start'});}
-      });
-    });
   </script>
 </body>
 </html>
