--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="container nav">
       <div class="brand" aria-label="Identidade do site">
         <!-- Logomarca pequena ao lado do nome/CRP -->
-        <img src="Logomarca.jpeg" alt="Logomarca Laura Sathler" class="brand-logo"
+        <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo"
              decoding="async" onerror="this.style.display='none'">
         <div class="brand-text">
           <b>Laura Sathler</b>
