--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --bg:#f6efe9; --bg2:#fbf8f5; --card:#ffffff; --text:#2b2b2b; --muted:#6b6b6b;
       --accent:#79a6a3; --accent-2:#e2d6cc; --radius:18px; --shadow:0 10px 24px rgba(0,0,0,.08);
       --maxw:1080px; --s1:.5rem; --s2:.75rem; --s3:1rem; --s4:1.5rem; --s5:2rem; --s6:3rem;
-      --header-h:64px;
+      --anchor-offset: 90px; /* espaço para âncoras não ficarem sob o topo */
     }
     *,*::before,*::after{box-sizing:border-box}
     html,body{height:100%}
@@ -19,6 +19,7 @@
       color:var(--text);
       background:linear-gradient(180deg,var(--bg),var(--bg2) 40%,var(--bg) 100%);
       line-height:1.6; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+      overflow-x:hidden;
     }
     h1,h2,h3{line-height:1.2;margin:0 0 var(--s2)}
     h1{font-size:clamp(1.8rem,3.5vw,2.6rem)}
@@ -28,37 +29,38 @@
     a:hover{text-decoration:underline}
     .container{width:min(var(--maxw),92vw);margin-inline:auto}
 
-    /* Header fixo + nav responsiva */
+    /* Header fixo FLUIDO (sem altura rígida) */
     header{
-      position:sticky; top:0; z-index:20; height:var(--header-h);
+      position:sticky; top:0; z-index:20;
       background:rgba(246,239,233,.9); backdrop-filter:saturate(160%) blur(8px);
       border-bottom:1px solid #eadfd6;
     }
-    .nav{display:flex;align-items:center;justify-content:space-between;gap:.75rem;height:var(--header-h)}
-    .brand{display:flex;align-items:center;gap:.6rem}
-    /* <<< Logomarca aumentada >>> */
-    .brand-logo{
-      height:64px; width:auto; display:block;
-      border:none; outline:none; border-radius:0; box-shadow:none; background:transparent;
-    }
+    .nav{display:flex;align-items:center;justify-content:space-between;gap:.75rem;padding:.6rem 0; flex-wrap:wrap}
+    .brand{display:flex;align-items:center;gap:.6rem; min-width: 220px}
+    .brand-logo{height:64px;width:auto;display:block;border:0;outline:0;background:transparent}
     .brand-text{display:flex;flex-direction:column}
     .brand-text b{font-weight:800}
     .brand-text small{color:var(--muted)}
 
-    /* Menu hamburguer (checkbox hack) */
+    /* Menu hamburguer (sem position absolute, para não sobrepor conteúdo) */
     .menu-toggle{display:none}
-    .menu-btn{display:none; align-items:center; gap:.5rem; font-weight:700; padding:.5rem .75rem; border-radius:10px}
+    .menu-btn{display:none; align-items:center; gap:.5rem; font-weight:700; padding:.5rem .75rem; border-radius:10px; cursor:pointer}
+    nav{width:auto}
     nav ul{display:flex; gap:.75rem; list-style:none; margin:0; padding:0}
     nav a{display:inline-block; padding:.35rem .55rem; border-radius:10px; font-weight:600}
     nav a:hover{background:var(--accent-2); text-decoration:none}
 
     /* Seções */
-    section{padding:calc(var(--s6) + .5rem) 0; scroll-margin-top:calc(var(--header-h) + 10px)}
+    section{padding:var(--s6) 0; scroll-margin-top:var(--anchor-offset)}
     .card{background:var(--card); border:1px solid #eee4da; border-radius:var(--radius); box-shadow:var(--shadow); padding:var(--s4)}
     .grid-2{display:grid; grid-template-columns:1fr 1fr; gap:var(--s4); align-items:center}
 
-    /* Imagens (mantém sombra somente nas imagens de conteúdo, não na logo) */
-    .img-cover{width:100%; max-width:100%; height:auto; border-radius:var(--radius); box-shadow:var(--shadow); object-fit:cover; aspect-ratio:16/9}
+    /* Imagens de conteúdo */
+    .img-cover{
+      width:100%; max-width:100%; height:auto;
+      border-radius:var(--radius); box-shadow:var(--shadow); object-fit:cover;
+      /* evita “corte” em telas menores que tratam aspect-ratio de forma agressiva */
+    }
     .portrait-circle{
       width:300px; height:300px; border-radius:50%; object-fit:cover;
       box-shadow:var(--shadow); display:block; margin:auto;
@@ -76,7 +78,7 @@
     /* MOBILE (até 900px) */
     @media (max-width:900px){
       .grid-2{grid-template-columns:1fr}
-      /* Ordem das colunas por seção para manter lógica no mobile */
+      /* Ordem lógica no mobile */
       #psicoterapia .text{order:1}  #psicoterapia .media{order:2}
       #sobre .media{order:1}        #sobre .text{order:2}
 
@@ -84,11 +86,16 @@
       .card{padding:var(--s3)}
       section{padding:var(--s5) 0}
 
-      /* Nav responsiva */
+      /* Menu mobile: em fluxo (empurra conteúdo, sem sobrepor) */
       .menu-btn{display:flex}
-      nav{position:absolute; top:var(--header-h); left:0; right:0; background:rgba(246,239,233,.98); border-bottom:1px solid #eadfd6; display:none}
-      nav ul{flex-direction:column; padding:1rem}
+      nav{width:100%}
+      nav ul{flex-direction:column; padding:0.5rem 0}
+      .menu-toggle:not(:checked) + .menu-btn + nav{display:none}
       .menu-toggle:checked + .menu-btn + nav{display:block}
+
+      /* Logo menor no mobile para equilibrar */
+      .brand-logo{height:48px}
+      :root{ --anchor-offset: 110px; } /* mais espaço para âncoras no mobile */
     }
   </style>
 </head>
@@ -97,9 +104,8 @@
   <header>
     <div class="container nav">
       <div class="brand" aria-label="Identidade do site">
-        <!-- Logomarca aumentada -->
-        <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo"
-             decoding="async" onerror="this.style.display='none'">
+        <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" decoding="async"
+             onerror="this.style.display='none'">
         <div class="brand-text">
           <b>Laura Sathler</b>
           <small>Psicóloga · CRP 04/30866</small>
@@ -127,7 +133,9 @@
       <div class="container grid-2">
         <div class="card text">
           <h2>O que é Psicoterapia?</h2>
-          <p>A psicoterapia é um espaço seguro de escuta e acolhimento...</p>
+          <p>A psicoterapia é um espaço seguro de escuta e acolhimento, onde você pode falar livremente sobre o que sente e pensa, sem julgamentos ou expectativas impostas. É um processo que convida ao autoconhecimento, ajudando a reconhecer sua história, compreender as próprias dores, cuidar de si e fortalecer o que traz sentido e vitalidade à vida.</p>
+          <p>Esse caminho nem sempre é simples — ele exige presença, entrega e, por vezes, coragem para olhar para dentro. Mas também é um espaço de encontro, clareza e afeto, que abre possibilidades para escolhas mais conscientes e formas mais autênticas de viver.</p>
+          <p>Cada conversa é uma oportunidade para se escutar, se compreender e se posicionar no mundo, no seu tempo e do seu jeito.</p>
         </div>
         <div class="media">
           <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async">
@@ -143,7 +151,8 @@
         </div>
         <div class="card text">
           <h2>Sobre mim</h2>
-          <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866)...</p>
+          <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866) com mais de 10 anos de experiência clínica, formada pela PUC Minas e com especialização em <strong>Avaliação e Diagnóstico Psicológico</strong>. Minha atuação é baseada na abordagem <strong>humanista-existencial</strong>, valorizando a singularidade de cada pessoa e construindo um espaço de acolhimento, presença e diálogo genuíno.</p>
+          <p>Atendo exclusivamente online pessoas com foco em casos de ansiedade, tristeza persistente, vazio existencial, estresse e burnout, autoestima e questões relacionadas a relacionamentos. Meu objetivo é oferecer um cuidado que respeite o seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
         </div>
       </div>
     </section>
@@ -152,10 +161,15 @@
     <section id="quando">
       <div class="container card">
         <h2>Quando buscar terapia?</h2>
+        <p>Pode ser o momento de iniciar um processo terapêutico quando você:</p>
         <ul>
           <li>Sente ansiedade, tristeza ou cansaço emocional frequentes.</li>
-          <li>Percebe dificuldade para lidar com mudanças...</li>
+          <li>Percebe dificuldade para lidar com mudanças, perdas ou transições de vida.</li>
+          <li>Vive um sentimento de vazio ou falta de sentido.</li>
+          <li>Enfrenta conflitos nos relacionamentos ou no trabalho.</li>
+          <li>Quer se conhecer melhor e encontrar novas formas de viver com mais equilíbrio e autenticidade.</li>
         </ul>
+        <p class="muted">A terapia é para qualquer pessoa que deseje cuidar da saúde emocional e desenvolver recursos para lidar com os desafios da vida.</p>
       </div>
     </section>
 
@@ -163,11 +177,12 @@
     <section id="contato">
       <div class="container card">
         <h2>Agende sua sessão</h2>
+        <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
         <div class="cta">
           <a class="btn btn-primary" href="https://wa.me/5531991593800" target="_blank" rel="noopener">📱 WhatsApp</a>
           <a class="btn" href="mailto:Laurasathler@yahoo.com.br">📧 E-mail</a>
         </div>
-        <p><strong>Telefone:</strong> +55 31 99159-3800</p>
+        <p style="margin-top:var(--s2)"><strong>Telefone:</strong> +55 31 99159-3800</p>
       </div>
     </section>
   </main>
@@ -177,7 +192,13 @@
   </footer>
 
   <script>
+    // Ano dinâmico
     document.getElementById('year').textContent = new Date().getFullYear();
+    // Fecha o menu após clique (mobile)
+    document.querySelectorAll('nav a').forEach(a=>{
+      a.addEventListener('click',()=>{ const cb=document.getElementById('menu'); if(cb) cb.checked=false; });
+    });
   </script>
 </body>
 </html>
+
