--- a/index.html
+++ b/index.html
@@ -26,13 +26,10 @@
     .card{background:var(--card);border:1px solid #eee4da;border-radius:var(--radius);box-shadow:var(--shadow);padding:var(--s4)}
     .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center}
     .portrait-circle{width:300px;height:300px;border-radius:50%;object-fit:cover;box-shadow:var(--shadow);display:block;margin:auto}
-    .btn{display:inline-flex;align-items:center;justify-content:center;gap:.4rem;padding:.85rem 1rem;border-radius:12px;
-      font-weight:700;border:1px solid transparent;box-shadow:var(--shadow);cursor:pointer;text-decoration:none}
-    .btn-primary{background:var(--accent);color:#fff}
     footer{padding:2rem 0;border-top:1px solid #eadfd6;color:var(--muted);text-align:center}
     /* ícones sociais */
-    .social{margin-top:1rem;display:flex;justify-content:center;gap:1rem}
-    .social a svg{width:26px;height:26px;fill:var(--accent);transition:.2s}
+    .social{margin-top:1rem;display:flex;justify-content:center;gap:1.5rem}
+    .social a svg{width:30px;height:30px;fill:var(--accent);transition:.2s}
     .social a:hover svg{fill:#2b2b2b}
     @media(max-width:900px){.grid-2{grid-template-columns:1fr}.portrait-circle{width:240px;height:240px}}
   </style>
@@ -61,26 +58,34 @@
   </header>
 
   <main>
-    <!-- Conteúdo das seções (psicoterapia, sobre mim, quando procurar, contato) -->
-    <!-- ... seu conteúdo atual ... -->
+    <!-- (outras seções iguais ao seu código atual: psicoterapia, sobre mim, quando procurar) -->
 
     <!-- Contato -->
     <section id="contato">
       <div class="container card" style="text-align:center">
         <h2>Agende sua sessão</h2>
         <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
-        <div class="cta">
-          <a class="btn btn-primary" href="https://wa.me/5531991593800" target="_blank">📱 WhatsApp</a>
-          <a class="btn" href="mailto:Laurasathler@yahoo.com.br">📧 E-mail</a>
-        </div>
-        <p style="margin-top:1rem"><strong>Telefone:</strong> +55 31 99159-3800</p>
-
-        <!-- Ícones sociais -->
+        
+        <!-- Ícones sociais (WhatsApp, E-mail, Instagram) -->
         <div class="social">
-          <a href="https://instagram.com/laurasathler" target="_blank" aria-label="Instagram">
-            <!-- ícone Instagram -->
+          <!-- WhatsApp -->
+          <a href="https://wa.me/5531991593800" target="_blank" aria-label="WhatsApp">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32Zm-48,128a24,24,0,1,1-24-24A24,24,0,0,1,352,160ZM224,338a82,82,0,1,1,82-82A81.91,81.91,0,0,1,224,338Zm176,94a18,18,0,0,1-18,18H66a18,18,0,0,1-18-18V176H82.91a140.65,140.65,0,0,0-2.91,28,144,144,0,1,0,288,0,140.65,140.65,0,0,0-2.91-28H400Z"/>
+              <path d="M380.9 97.1C339-7.9 209.2-33 121.3 26.3c-65.7 45.5-94 124.4-68.4 199.8L16.5 464l241.6-36.1c76.7 27.7 162.1-.2 207.6-65.9 59.3-87.9 34.2-217.7-83.1-264.9zM232 396.1c-30.2 0-59.6-8.1-85.4-23.4l-6.1-3.6-90.2 13.5 13.6-88.6-3.9-6.4c-42.9-70.8-22.2-163.5 48.6-206.4 70.8-42.9 163.5-22.2 206.4 48.6s22.2 163.5-48.6 206.4c-23.3 14.1-50 21.9-77 21.9zm101.7-138.5c-5.6-2.8-33.1-16.4-38.2-18.2-5.1-1.9-8.8-2.8-12.5 2.8s-14.4 18.2-17.7 21.9c-3.3 3.7-6.5 4.2-12.1 1.4-5.6-2.8-23.5-8.7-44.7-27.6-16.5-14.7-27.6-32.9-30.9-38.5s-.3-8.4 2.5-11.2c2.6-2.8 5.6-7.3 8.4-10.9 2.8-3.7 4.6-6.1 7-10.1s1.9-7.5-.1-10.3c-1.9-2.8-12.5-30.1-17.2-41.3-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2s-9.7 1.4-14.8 7c-5.1 5.6-19.5 19.1-19.5 46.5s20 53.7 22.8 57.5c2.8 3.7 39.4 60.1 95.1 84.3 35.3 15.3 49.1 16.6 66.8 14.4 17.7-1.9 33.1-13.5 37.8-26.5 4.7-13 4.7-24.1 3.3-26.5-1.3-2.6-5.1-4.2-10.7-7z"/>
+            </svg>
+          </a>
+
+          <!-- E-mail -->
+          <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path d="M502.3 190.8l-192-160C298.3 25.1 280.1 16 261.3 16H48C21.5 16 0 37.5 0 64v384c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V220.6c0-18.8-9.1-37-23.7-48.6zM464 432H48V80h213.3l192 160V432z"/>
+            </svg>
+          </a>
+
+          <!-- Instagram -->
+          <a href="https://instagram.com/laurasathler" target="_blank" aria-label="Instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32Zm-48,128a24,24,0,1,1-24-24A24,24,0,0,1,352,160ZM224,338a82,82,0,1,1,82-82A81.91,81.91,0,0,1,224,338Z"/>
             </svg>
           </a>
         </div>
